--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r-vue-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "UI library For Vue",
   "main": "lib/rui.js",
   "scripts": {
@@ -52,14 +52,14 @@
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
   },
+  "peerDependencies": {
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
+  },
   "dependencies": {
-    "@nutui/nutui": "^2.1.8",
     "axios": "^0.19.2",
     "core-js": "^2.6.10",
-    "qiniu-js": "^2.5.5",
-    "vue": "^2.6.10",
-    "vue-cookie-ui": "^1.0.1",
-    "vue-router": "^3.1.3"
+    "qiniu-js": "^2.5.5"
   },
   "engines": {
     "npm": ">=v6.12.0",
