--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "peerDependencies": {
     "vue": "^2.6.10",
